--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "02-desafio",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"},
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
     "lint": "eslint src --ext .ts --fix",
+    "build": "tsup src --out-dir build",
     "test": "vitest"
   },
   "keywords": [],
